# cpp-psdl

./: .gitignore  CMakeLists.txt  Doxyfile.d  README.md
include/: curl_error.hpp  network_error.hpp  psclient.h  pslesson.h
src/: CMakeLists.txt  curl_error.h  main.cpp  psclient.cpp  psclient.h  pscourse.cpp  pscourse.h  pslesson.cpp  psmodule.cpp  psmodule.h
